test/expected/const_cast_i.out
const cast x into int
                  ^
19: error: invalid const_cast type "int"; must be a pointer, pointer-to-member, reference, or rvalue reference
